# continue

./: .gitignore  CHANGELOG_CN.md  CODE_OF_CONDUCT_CN.md  CONTRIBUTING_CN.md  README_CN.md  SECURITY_CN.md  keycaps-todo_CN.md  package_doc.md  pnpm-lock.yaml  仓库同步操作.md  安装依赖注意.md
.github/: pull_request_template_CN.md
binary/: README_CN.md  package-lock.json
core/: package-lock.json  package.json  package_doc.md  pnpm-lock.yaml
core/diff/test-examples/: README_CN.md
core/indexing/: README_CN.md
core/indexing/docs/: DocsService.ts_说明.md
core/protocol/: passThrough.ts
extensions/vscode/: package-lock.json
gui/: README_CN.md  package-lock.json
manual-testing-sandbox/: readme_CN.md  testrs
scripts/: install-dependencies.sh  install-dependencies_pnpm.sh
sync/: Cargo.toml
sync/examples/: test_sample.rs
sync/src/: README_CN.md  gitignore.rs  lib.rs  sync.rs_bk
sync/src/sync/: merkle.rs  mod.rs
sync/src/utils/: mod.rs
